--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                     <h3 class="teamlist__name">Игорь Демьяненко</h3>
                     <p class="teamlist__position"> Product Designer</p>
                     <ul class="soclist">
-                        <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-instagram"></use></svg></a></li>
-                        <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-twitter"></use></svg></a></li>
-                        <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-facebook"></use></svg></a></li>
-                        <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-linkedin"></use></svg></a></li>
+                        <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-instagram"></use></svg></a></li>
+                        <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-twitter"></use></svg></a></li>
+                        <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-facebook"></use></svg></a></li>
+                        <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px"><use href="./images/spryte.svg#icon-linkedin"></use></svg></a></li>
                     </ul>
                 </div>
         </li>
@@ -142,16 +142,16 @@
                         <h3 class="teamlist__name">Ольга Репина </h3>
                         <p class="teamlist__position"> Frontend Developer</p>
                         <ul class="soclist">
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-instagram"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-twitter"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-facebook"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-linkedin"></use>
                                     </svg></a></li>
                         </ul>
@@ -163,16 +163,16 @@
                         <h3 class="teamlist__name">Николай Тарасов</h3>
                         <p class="teamlist__position"> Marketing</p>
                         <ul class="soclist">
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-instagram"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-twitter"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-facebook"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-linkedin"></use>
                                     </svg></a></li>
                         </ul>
@@ -184,16 +184,16 @@
                         <h3 class="teamlist__name">Михаил Ермаков</h3>
                         <p class="teamlist__position"> UI Designer</p>
                         <ul class="soclist">
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-instagram"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-twitter"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-facebook"></use>
                                     </svg></a></li>
-                            <li class="soclist__item"><a href=""><svg class="soclist__icon" width="20" height="20px">
+                            <li class="soclist__item"><a class="soclist__link" href=""><svg class="soclist__icon" width="20" height="20px">
                                         <use href="./images/spryte.svg#icon-linkedin"></use>
                                     </svg></a></li>
                         </ul>
